# agentlens

./: .gitignore  AgentLens_Blueprint.md  AgentLens_PRD.md  AgentLens_ProjectStatus.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  Makefile  PUBLISH_GUIDE.md  README.md  docker-compose.yml  llms.txt
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/agentlens-check/: action.yml
.github/actions/agentlens-check/src/: main.py
.github/workflows/: agentlens-ci.yml  ci.yml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/budget/: BudgetAlert.tsx
dashboard/src/components/costs/: CostBreakdown.tsx  CostHotspots.tsx  CostOverview.tsx  CostTimeline.tsx
dashboard/src/components/hallucination/: DiffViewer.tsx  HallucinationPanel.tsx  SeverityBadge.tsx
dashboard/src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
dashboard/src/components/memory/: MemoryDetail.tsx  MemoryInfluence.tsx  MemorySearch.tsx  MemoryTimeline.tsx
dashboard/src/components/multiagent/: AgentTopology.tsx
dashboard/src/components/replay/: ReplayPlayer.tsx  ReplayState.tsx  ReplayTimeline.tsx
dashboard/src/components/score/: ScoreBadge.tsx  ScoreBreakdown.tsx
dashboard/src/components/shared/: Badge.tsx  CodeBlock.tsx  EmptyState.tsx  JsonViewer.tsx  LoadingSpinner.tsx  Modal.tsx  Toast.tsx  Tooltip.tsx
dashboard/src/components/traces/: EventBadge.tsx  EventNode.tsx  TraceDetail.tsx  TraceGraph.tsx  TraceTimeline.tsx
dashboard/src/contexts/: WebSocketContext.tsx
dashboard/src/hooks/: useBudget.ts  useCompare.ts  useCostCalculator.ts  useReplay.ts  useScore.ts  useTraceGraph.ts  useWebSocket.ts
dashboard/src/pages/: BudgetPage.tsx  ComparePage.tsx  CostsPage.tsx  HallucinationsPage.tsx  MemoryPage.tsx  PromptsPage.tsx  ReplayPage.tsx  ScorePage.tsx  SettingsPage.tsx  TracesPage.tsx
dashboard/src/stores/: sessionStore.ts  settingsStore.ts  traceStore.ts  websocketStore.ts
dashboard/src/types/: index.ts  trace.ts
examples/: README.md  demo_anthropic_agent.py  demo_langchain_agent.py  demo_multi_agent.py  demo_multi_step.py  demo_openai_agent.py  demo_recording.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/agentlens_mcp/: __init__.py  server.py  tools.py
sdk-python/: README.md  llms.txt  pyproject.toml
sdk-python/src/agentlens/: __init__.py  client.py  trace.py
sdk-python/src/agentlens/interceptors/: __init__.py  anthropic_interceptor.py  autogen_interceptor.py  crewai_interceptor.py  generic_interceptor.py  langchain_interceptor.py  openai_interceptor.py
sdk-python/src/agentlens_sdk/: __init__.py  client.py  config.py  trace.py  types.py
sdk-python/src/agentlens_sdk/interceptors/: __init__.py  anthropic_interceptor.py  autogen_interceptor.py  crewai_interceptor.py  generic_interceptor.py  langchain_interceptor.py  openai_interceptor.py  semantic_kernel_interceptor.py
sdk-python/tests/: test_client.py  test_interceptors.py  test_trace.py
sdk-typescript/: README.md  llms.txt  package-lock.json  package.json
sdk-typescript/src/: client.ts  config.ts  index.ts  trace.ts  types.ts
sdk-typescript/src/interceptors/: anthropic.ts  autogen.ts  crewai.ts  generic.ts  langchain.ts  openai.ts  semantic_kernel.ts
server/: Dockerfile  README.md  alembic.ini  llms.txt  pyproject.toml  requirements.txt
server/agentlens_server/: __init__.py  database.py  main.py
server/agentlens_server/models/: __init__.py  budget_rule.py  hallucination_alert.py  memory_entry.py  prompt.py  prompt_version.py  session.py  trace_event.py
server/agentlens_server/routers/: budget.py  compare.py  costs.py  hallucinations.py  memory.py  privacy.py  prompts.py  score.py  sessions.py  testgen.py  traces.py
server/agentlens_server/schemas/: budget.py  cost.py  hallucination.py  prompt.py  score.py  trace.py
server/agentlens_server/services/: budget_service.py  compare_service.py  cost_service.py  hallucination_service.py  memory_service.py  prompt_service.py  replay_service.py  score_service.py  session_service.py  testgen_service.py  trace_service.py
server/agentlens_server/utils/: __init__.py  text_similarity.py
server/agentlens_server/websocket/: handlers.py
server/alembic/: env.py
server/alembic/versions/: 001_initial.py
server/src/: config.py  database.py  main.py
server/src/models/: __init__.py  hallucination_alert.py  memory_entry.py  session.py  trace_event.py
server/src/routers/: costs.py  hallucinations.py  memory.py  sessions.py  traces.py
server/src/schemas/: memory.py  session.py
server/src/services/: cost_service.py  hallucination_service.py  memory_service.py  replay_service.py  session_service.py  trace_service.py
server/src/utils/: pricing.py  text_similarity.py
server/src/websocket/: handlers.py  manager.py
server/tests/: conftest.py  test_cost_calculation.py  test_hallucination.py  test_sessions.py  test_trace_ingestion.py  test_websocket.py
tests/integration/: test_runner.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: client.ts  commands.ts  decorations.ts  extension.ts  tracePanel.ts
