[project]
name = "agentlens-mcp"
version = "0.1.0"
description = "MCP server for AgentLens — allows MCP-native agents to send traces"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-ulid>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens_mcp"]

[project.scripts]
agentlens-mcp = "agentlens_mcp.server:run"
