[project]
name = "agentlens-server"
version = "0.2.0"
description = "AgentLens observability server for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentLens Contributors" }]
keywords = ["ai", "agents", "observability", "tracing", "llm", "server", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sentence-transformers>=3.1.0",
    "numpy>=1.26.0",
    "python-ulid>=2.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/ArkFelix7/agentlens"
Repository = "https://github.com/ArkFelix7/agentlens"
"Bug Tracker" = "https://github.com/ArkFelix7/agentlens/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
]

[project.scripts]
agentlens-server = "agentlens_server.main:run"
agentlens = "agentlens_server.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentlens_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
